syntax = "proto3";

option csharp_namespace = "Notifications.GrpcApi";

package mails;

// The greeting service definition.
service MailService {
  // Sends a greeting
  rpc SendMessage(Message) returns (Response);
}

// The request message containing the user's name.
message Message {
  string nameFrom = 1;
  string subject = 2;
  string content = 3;
  optional File file = 4;
  repeated string to = 5;
}

// The response message containing the greetings.
message Response {
  string message = 1;
}
message File {
  string fileName = 1;
  string fileType = 2;
  bytes content = 3;
}
